# photo_restore

./: .gitignore  README.html  README.md  pyproject.toml  requirements-face-enhance.lock.txt  restore-batch  restore-batch-production  tmp_image_balance_scores.tsv
outputs/batch_prod_20260224_130557/: Image_20260218_0001.jpg.json  Image_20260218_0002.jpg.json  Image_20260218_0003.jpg.json  Image_20260218_0004.jpg.json  Image_20260218_0005.jpg.json  Image_20260218_0006.jpg.json  Image_20260218_0007.jpg.json  Image_20260218_0008.jpg.json  Image_20260218_0009.jpg.json  Image_20260218_0010.jpg.json  Image_20260218_0011.jpg.json  Image_20260218_0012.jpg.json  Image_20260218_0013.jpg.json  Image_20260218_0014.jpg.json  Image_20260218_0015.jpg.json  Image_20260218_0016.jpg.json  Image_20260218_0017.jpg.json  Image_20260218_0018.jpg.json  (+46 more)
photo_restore_batch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
presets/: production.args
restore_batch/: __init__.py  classification.py  cli.py  color_math.py  denoise.py  discovery.py  dust.py  face_enhance.py  flatfield.py  jpeg_out.py  metadata.py  models.py  normalize.py  openai_repair.py  pipeline.py  png16.py  redeye.py  sharpen.py  tiff16.py  tonal.py  white_balance.py
tests/: test_classification_sepia_gate.py  test_cli_policy.py  test_dust_cleanup.py  test_jpeg_output_cap.py  test_openai_repair.py  test_redeye_color_guardrails.py  test_tonal_near_grayscale_policy.py  test_white_balance_policy.py
tmp/: auto_default_meta.jsonl  dyn_meta.jsonl  dyn_meta2.jsonl  dyn_meta3.jsonl
(+4 files in other folders)
